--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,42 @@
+html, body, .App, #root {
+  height: 100%;
+}
+
 .App {
   display: flex;
   overflow: hidden;
-  flex-direction: column;
+  flex-direction: row;
 }
 
 .App > * {
-  flex: 0 0 auto;
+  display: flex;
   overflow: scroll;
+  flex-direction: column;
 }
 
 .App-header {
   height: 50px;
-  background: #555;
   color: white;
+}
+
+.App-tasks {
+  width: 240px;
+  background-color: #343a40;
+  color: white;
+}
+
+.App-tasks h2 {
+  font-size: 18px;
+  margin-top: 20px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.App-tasks h3 {
+  font-size: 14px;
+  margin-top: 10px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .App > .App-main {
@@ -28,4 +52,35 @@
 
 .error {
   color: red;
+}
+
+.navbar {
+  color: black;
+  height: 50px;
+  border-bottom: 1px solid hsla(0,0%,100%,.3);
+  padding-bottom: 10px;
+  margin-bottom: 15px;
+  background-color: #f3f3f3;
+}
+
+.tasks {
+  padding: 0px;
+  margin-top: 15px;
+}
+
+.task-item {
+  cursor: pointer;
+  padding: 10px;
+  padding-left: 30px;
+  text-align: left;
+  margin: auto;
+}
+
+.task-item:hover, .task-item.selected {
+  background-color: white;
+  color: black;
+}
+
+.divider {
+  border-bottom: 1px solid hsla(0,0%,100%,.3);
 }
